poc-k8s/EachFiles/deploy_inference.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-inference-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inference-server
  template:
    metadata:
      name: poc-infer
      labels:
        app: inference-server
    spec:
      containers:
      - name: my-poc-infer
        image: poc-infer:0.1
        ports:
        - containerPort: 5000
          name: flask-port
